--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "yasinkuyu/omnipay-nestpay",
     "type": "library",
-    "description": "NestPay (EST) (Ä°ÅŸ BankasÄ±, Akbank, Finansbank, Denizbank, Kuveytturk, Halkbank, Anadolubank, ING Bank, Citibank, Cardplus) gateway for Omnipay payment processing library",
+    "description": "NestPay (EST) (Ýþ Bankasý, Akbank, Finansbank, Denizbank, Kuveytturk, Halkbank, Anadolubank, ING Bank, Citibank, Cardplus) gateway for Omnipay payment processing library",
     "keywords": [
         "nestpay",
         "est",
